# matrix-fire

./: Cargo.toml  Makefile  README.md  baffle.ps  sdkconfig.defaults
esp/: Cargo.toml  Makefile
esp/.cargo/: config.toml
esp/src/: http.rs  main.rs  neopixels.rs  wifi.rs
parts/: baffles.dxf  baffles.ps
render/: Cargo.toml
render/src/: lib.rs
wasm/: Cargo.toml  Makefile  index.html
wasm/src/: lib.rs
