[workspace]
members = ["esp", "render", "wasm"]
# default-members = ["src/init", "src/fs-writer"]
resolver = "2"

[profile.release]
opt-level = "z"
strip = false
lto = true
#panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
strip = false

#[patch.crates-io]
#esp-idf-hal = { path = "../esp-idf-hal" }
#esp-idf-svc = { path = "../esp-idf-svc" }
