[package]
name = "matrix-fire"
version = "0.1.0"
authors = ["David Ventura <davidventura27@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[features]
#default = ["std",] # "esp-idf-svc/native"]

#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#experimental = ["esp-idf-svc/experimental"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[target.'cfg(target_vendor = "espressif")'.dependencies]
esp-idf-hal = "0.42"
esp-idf-sys = ">=0.33"
smart-leds = "0.4.0"
smart-leds-trait = "0.2.0"
ws2812-esp32-rmt-driver = { version = "0.7.1", features = ["smart-leds-trait", "embedded-graphics-core"] }

[build-dependencies]
embuild = "0.31.3"

[dependencies]
render = { version = "0.1.0", path = "../render" }
