[package]
name = "matrix-fire"
version = "0.1.0"
authors = ["David Ventura <davidventura27@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[features]
#default = ["std",] # "esp-idf-svc/native"]

#pio = ["esp-idf-svc/pio"]
#std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
#alloc = ["esp-idf-svc/alloc"]
#nightly = ["esp-idf-svc/nightly"]
#experimental = ["esp-idf-svc/experimental"]
#embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[target.'cfg(target_vendor = "espressif")'.dependencies]
esp-idf-hal = "0.42"
esp-idf-sys = ">=0.33"
smart-leds = "0.4.0"
smart-leds-trait = "0.2.0"
esp-idf-svc = "*"
ws2812-esp32-rmt-driver = { version = "0.7.1", features = ["smart-leds-trait", "embedded-graphics-core"] }
#ws2812-esp32-rmt-driver = { path = "../../ws2812-esp32-rmt-driver"}

[build-dependencies]
embuild = "0.31.3"

[dependencies]
embedded-svc = "0.27.1"
esp_idf_logger = "0.1.1"
log = "0.4.20"
num-traits = "0.2.18"
render = { version = "0.1.0", path = "../render" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
