[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_vendor = "espressif"))'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"

[dependencies]
rgb = "0.8.37"
