[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.68", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
